--- a/index.html
+++ b/index.html
@@ -3,10 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<div class="container">
+
+    <header class="header-container">
+        <h1 class="header-title">Code Blog Help</h1>
+        <p class="header-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus vel possimus quae reprehenderit omnis. Corporis quod asperiores doloribus omnis</p>
+    </header>
+
+    <main class="card-container">
+
+        <!-- card 1 start -->
+        <div class="card">
+            <a href="#" class="card-img">
+                <img src="1.jpg" alt="">
+            </a>
+            <div class="card-title-container">
+                <a href="#">
+                    <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+            </div>
+
+            <div class="card-footer-container">
+                <div class="author-container">
+                    <div class="author-avtar">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="">
+                    </div>
+                    <div class="author-info">
+                        <span>
+                            John doe
+                        </span>
+                        <span>
+                            19 sep 2013
+                        </span>
+                    </div>
+                </div>
+                <div class="tag-container">
+                    <span>Technology</span>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- card 1 end here  -->
+
+    </main>
 
 </div>
 </body>
