--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <!-- card 1 start -->
         <div class="card">
-            <a href="#" class="card-img">
-                <img src="1.jpg" alt="">
+            <a href="#" class="card-img-container">
+                <img src="1.jpg" alt="" class="card-img">
             </a>
             <div class="card-title-container">
                 <a href="#">
@@ -37,12 +37,12 @@
                         <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="">
                     </div>
                     <div class="author-info">
-                        <span>
+                        <p class="author-name">
                             John doe
-                        </span>
-                        <span>
+                        </p>
+                        <p class="author-date">
                             19 sep 2013
-                        </span>
+                        </p>
                     </div>
                 </div>
                 <div class="tag-container">
@@ -51,8 +51,245 @@
             </div>
 
         </div>
-
         <!-- card 1 end here  -->
+         <!-- card 2 -->
+        <div class="card">
+            <a href="#" class="card-img-container">
+                <img src="1.jpg" alt="" class="card-img">
+            </a>
+            <div class="card-title-container">
+                <a href="#">
+                    <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+            </div>
+
+            <div class="card-footer-container">
+                <div class="author-container">
+                    <div class="author-avtar">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">
+                            John doe
+                        </p>
+                        <p class="author-date">
+                            19 sep 2013
+                        </p>
+                    </div>
+                </div>
+                <div class="tag-container">
+                    <span>Technology</span>
+                </div>
+            </div>
+
+        </div>
+        <!-- card 3 -->
+        <div class="card">
+            <a href="#" class="card-img-container">
+                <img src="1.jpg" alt="" class="card-img">
+            </a>
+            <div class="card-title-container">
+                <a href="#">
+                    <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+            </div>
+
+            <div class="card-footer-container">
+                <div class="author-container">
+                    <div class="author-avtar">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">
+                            John doe
+                        </p>
+                        <p class="author-date">
+                            19 sep 2013
+                        </p>
+                    </div>
+                </div>
+                <div class="tag-container">
+                    <span>Technology</span>
+                </div>
+            </div>
+
+        </div>
+        <!-- card 4 -->
+        <div class="card">
+            <a href="#" class="card-img-container">
+                <img src="1.jpg" alt="" class="card-img">
+            </a>
+            <div class="card-title-container">
+                <a href="#">
+                    <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+            </div>
+
+            <div class="card-footer-container">
+                <div class="author-container">
+                    <div class="author-avtar">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">
+                            John doe
+                        </p>
+                        <p class="author-date">
+                            19 sep 2013
+                        </p>
+                    </div>
+                </div>
+                <div class="tag-container">
+                    <span>Technology</span>
+                </div>
+            </div>
+
+        </div>
+        <!-- card 5 -->
+        <div class="card">
+            <a href="#" class="card-img-container">
+                <img src="1.jpg" alt="" class="card-img">
+            </a>
+            <div class="card-title-container">
+                <a href="#">
+                    <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+            </div>
+
+            <div class="card-footer-container">
+                <div class="author-container">
+                    <div class="author-avtar">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">
+                            John doe
+                        </p>
+                        <p class="author-date">
+                            19 sep 2013
+                        </p>
+                    </div>
+                </div>
+                <div class="tag-container">
+                    <span>Technology</span>
+                </div>
+            </div>
+
+        </div>
+        <!-- card 6 -->
+        <div class="card">
+            <a href="#" class="card-img-container">
+                <img src="1.jpg" alt="" class="card-img">
+            </a>
+            <div class="card-title-container">
+                <a href="#">
+                    <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+            </div>
+
+            <div class="card-footer-container">
+                <div class="author-container">
+                    <div class="author-avtar">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">
+                            John doe
+                        </p>
+                        <p class="author-date">
+                            19 sep 2013
+                        </p>
+                    </div>
+                </div>
+                <div class="tag-container">
+                    <span>Technology</span>
+                </div>
+            </div>
+
+        </div>
+        <!-- card 7 -->
+        <div class="card">
+            <a href="#" class="card-img-container">
+                <img src="1.jpg" alt="" class="card-img">
+            </a>
+            <div class="card-title-container">
+                <a href="#">
+                    <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+            </div>
+
+            <div class="card-footer-container">
+                <div class="author-container">
+                    <div class="author-avtar">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">
+                            John doe
+                        </p>
+                        <p class="author-date">
+                            19 sep 2013
+                        </p>
+                    </div>
+                </div>
+                <div class="tag-container">
+                    <span>Technology</span>
+                </div>
+            </div>
+
+        </div>
+        <!-- card 8  -->
+        <div class="card">
+            <a href="#" class="card-img-container">
+                <img src="1.jpg" alt="" class="card-img">
+            </a>
+            <div class="card-title-container">
+                <a href="#">
+                    <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+            </div>
+
+            <div class="card-footer-container">
+                <div class="author-container">
+                    <div class="author-avtar">
+                        <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">
+                            John doe
+                        </p>
+                        <p class="author-date">
+                            19 sep 2013
+                        </p>
+                    </div>
+                </div>
+                <div class="tag-container">
+                    <span>Technology</span>
+                </div>
+            </div>
+
+        </div>
 
     </main>
 
